# purereason

./: .gitignore  colab.ipynb  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2025-06-16-purereason-plan.md
docs/superpowers/specs/: 2025-06-16-purereason-design.md
scripts/: colab_run.sh  colab_setup.sh  setup_community_envs.py  setup_lean.sh
src/: config.py  dataset.py  eval.py  model.py  rollout.py  task_env.py  train.py
src/envs/: arc_agi_env.py  block_world_env.py  cryptid_env.py  sat_env.py  sokoban_env.py  spreadsheet_env.py
src/tasks/: __init__.py  arc_agi_one_task.py  arc_agi_task.py  block_world_task.py  blue_prince_task.py  code_task.py  cryptid_task.py  graph_task.py  knights_knaves_task.py  lean_task.py  logic_task.py  math_task.py  sat_task.py  sokoban_task.py  spreadsheet_task.py
tests/: test_registry.py  test_rewards.py
