[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "purereason"
version = "0.1.0"
description = "RL-based LLM reasoning training without KL divergence"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.44.0",
    "trl>=0.11.0",
    "peft>=0.12.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.20.0",
    "accelerate>=0.33.0",
    "sympy>=1.12",
    "wandb>=0.17.0",
]
